--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5000/",
   "dependencies": {
+    "@syncfusion/ej2-react-charts": "^17.4.51",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -13,7 +14,10 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-chartjs-2": "^2.9.1",
+    "react-dnd": "^10.0.2",
+    "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.12.0",
+    "react-draggable": "^4.2.0",
     "react-full-screen": "^0.2.4",
     "react-intl": "^3.11.0",
     "react-medium-editor": "^1.8.1",
