--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "boxicons": "^2.0.5",
     "chart.js": "^2.9.3",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
