--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-scripts": "3.4.0",
     "reactstrap": "^8.2.0",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "twilio": "^3.42.2"
   },
   "scripts": {
     "start": "react-scripts start",
