--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "twilio": "^3.42.2",
-    "twilio-client": "^1.10.1"
+    "twilio-client": "^1.10.1",
+    "websocket": "^1.0.31"
   },
   "scripts": {
     "start": "react-scripts start",
