--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "reactstrap": "^8.2.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "styled-components": "^5.1.0",
     "twilio": "^3.42.2",
     "twilio-client": "^1.10.1",
     "websocket": "^1.0.31"
