--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-transition-group": "^4.4.1",
     "reactstrap": "^8.2.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
