--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^3.3.11"
   }
 }
