--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "proxy": "http://localhost:5000/",
   "dependencies": {
+    "@chargebee/chargebee-js-react-wrapper": "^0.2.1",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.7.0",
     "@syncfusion/ej2-react-charts": "^17.4.51",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -15,6 +18,7 @@
     "formik": "^2.1.4",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
+    "react-beautiful-dnd": "^13.0.0",
     "react-chartjs-2": "^2.9.0",
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2",
@@ -28,6 +32,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-stripe-elements": "^6.1.2",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.2.0",
     "redux": "^4.0.5",
