--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.4.1",
     "boxicons": "^2.0.5",
     "chart.js": "^2.9.3",
+    "express": "^4.17.1",
     "formik": "^2.1.4",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
