--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^2.9.3",
     "express": "^4.17.1",
     "formik": "^2.1.4",
+    "moment-timezone": "^0.5.31",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-beautiful-dnd": "^13.0.0",
