--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.12.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-chartjs-2": "^2.9.0",
+    "react-compound-timer": "^1.2.0",
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.12.0",
