--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5000/",
   "dependencies": {
     "@chargebee/chargebee-js-react-wrapper": "^0.2.1",
+    "@sentisis/react-tags-input": "^1.0.6",
     "@sentry/browser": "^5.17.0",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.7.0",
